--- a/code/analysis.ipynb
+++ b/code/analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a4773d49",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "652c5d30",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7ad5d823",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Mouse_Data.Mouse_Data object at 0x000001A117D9AB60>, <Mouse_Data.Mouse_Data object at 0x000001A1155D5AE0>, <Mouse_Data.Mouse_Data object at 0x000001A11562C370>, <Mouse_Data.Mouse_Data object at 0x000001A1155BF4F0>]\n"
+      "[<Mouse_Data.Mouse_Data object at 0x000002691A42EC80>, <Mouse_Data.Mouse_Data object at 0x00000269170D6B30>, <Mouse_Data.Mouse_Data object at 0x000002691740B3A0>, <Mouse_Data.Mouse_Data object at 0x000002691A42ECB0>]\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "3adf11ae",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "21ad00de",
    "metadata": {},
    "outputs": [
