--- a/code/dlc_anal.ipynb
+++ b/code/dlc_anal.ipynb
@@ -922,7 +922,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "microstim",
    "language": "python",
    "name": "python3"
   },
@@ -936,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
